--- a/_basic-components/regression/sequence-models.ipynb
+++ b/_basic-components/regression/sequence-models.ipynb
@@ -359,7 +359,7 @@
     "attention = Dense(1, activation='tanh')(activations) # (batch, n_lags, 1)\n",
     "attention = Flatten()(attention)\n",
     "attention = Activation('softmax', name = 'attention_weigths')(attention)\n",
-    "# RepeaVector ex) (batch, features) -> (batch, n, features)\n",
+    "# RepeaVector ex: (batch, features) -> (batch, n, features)\n",
     "attention = RepeatVector(hidden_units * 1)(attention) # (batch, 3, 5)\n",
     "attention = Permute([2, 1])(attention) # (batch, 5, 3)\n",
     "\n",
@@ -375,7 +375,7 @@
     "history = model_attn.fit(x_train, y_train, epochs=300, batch_size=4, validation_data=(x_test, y_test), verbose=0)\n",
     "\n",
     "#\n",
-    "# Predict values over the train and test ranges\n",
+    "# train과 test 모두 predict한 후, 결과를 확인한다.\n",
     "#\n",
     "y_train_pred = model_attn.predict(x_train)\n",
     "y_test_pred = model_attn.predict(x_test)\n",
@@ -384,7 +384,7 @@
     "plot_history(history)\n",
     "\n",
     "#\n",
-    "#  evaluate atention weights for each time step\n",
+    "#  attention weights를 시각화합니다.\n",
     "#\n",
     "attention_model = Model(inputs=model_attn.input, outputs=model_attn.get_layer('attention_weigths').output)\n",
     "a = attention_model.predict(x_train)\n",
